# projeto-advocacia-gtarp

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
contrib/: env-sample
mediafiles/: Resposta_acusacao.docx
mediafiles/provas_autor/: MODELO_SENTENCA.docx
projeto_advocacia/: asgi.py  settings.py  urls.py  wsgi.py
projeto_advocacia/core/: apps.py  forms.py  urls.py  views.py  views_base.py
projeto_advocacia/core/tests/: tests_app.py  tests_wsgi.py
projeto_advocacia/dashboard/: apps.py  urls.py  views.py
projeto_advocacia/documento/: admin.py  apps.py  forms.py  models.py  models_prova.py  urls.py  views.py
projeto_advocacia/processo/: admin.py  apps.py  forms.py  models.py  urls_legislacao.py  urls_processo.py  views.py
projeto_advocacia/usuario/: admin.py  apps.py  forms.py  models.py  urls.py  urls_servicos.py  views.py
templates/: dashboard.html
templates/base/: main.html  navbar.html  sidebar.html
templates/cliente/: detail.html  list.html  update.html
templates/documento/: delete.html  detail.html  list.html
templates/error/: 403.html  404.html
templates/home/: diario_oficial.html  index.html  login.html  logout.html  register.html
templates/legislacao/: list.html
templates/prestacao_servico/: create.html  detail.html  list.html  servico.html
templates/processo/: delete.html  detail.html  list.html
templates/servico/: delete.html  detail.html  list.html
templates/usuario/: change_password.html  delete.html  detail.html  list.html  perfil.html  update.html
(+68 files in other folders)
